// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextButton renders 1`] = `
<button data-cy="ctrl" class="btn jet-black playbackCtrl melody-playbackCtrl"
role="button">
  <svg class="playbackCtrl__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
    <path d="M4 18l8.5-6L4 6v12zm9-12v12l8.5-6L13 6z"></path>
  </svg>
</button>
`;

exports[`NextButton renders with a disabled class if totalTracks <= 1 1`] = `
<button data-cy="ctrl" class="btn jet-black playbackCtrl melody-playbackCtrl playbackCtrl--disabled"
role="button">
  <svg class="playbackCtrl__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
    <path d="M4 18l8.5-6L4 6v12zm9-12v12l8.5-6L13 6z"></path>
  </svg>
</button>
`;
